Revert "Commited my changes"

--- a/site_info_extras/site_info_extras.info.yml
+++ b/site_info_extras/site_info_extras.info.yml
@@ -1,6 +1,6 @@
 name: 'Site Info Extras'
 type: module
-description: 'Add extra configurations to site related information.'
+description: 'Add extra configurations to site information.'
 core: 8.x
 package: Other
 dependencies:
